# NoteScribe

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  opencode.json  settings.gradle.kts
.github/workflows/: android.yml  build.yml
.opencode/plans/: rust-uniffi-build-improvements.md
.opencode/skills/architecture/: SKILL.md
.opencode/skills/architecture/references/: data-flow.md  feature-workflow.md  navigation.md
.opencode/skills/kotlin-ui-conventions/: SKILL.md
.opencode/skills/kotlin-ui-conventions/references/: adaptive-layout.md  composable-guidelines.md  mvi-pattern.md
.opencode/skills/rust-core-conventions/: SKILL.md
.opencode/skills/rust-core-conventions/references/: database.md  encryption.md  error-handling.md  uniffi-export.md
.opencode/skills/scripts/: check-all.sh  check-architecture.sh  check-kotlin-quality.sh  check-rust-quality.sh  run-all-tests.sh  run-strict-review.sh
.opencode/skills/strict-review/: SKILL.md
.opencode/skills/strict-review/references/: code-quality-review.md  performance-review.md  security-review.md
.opencode/skills/testing/: SKILL.md
.opencode/skills/testing/references/: kotlin-unit-testing.md  rust-testing.md  ui-testing.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/gradle/: libs.versions.toml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
notescribe-core/: Cargo.toml  uniffi.toml
notescribe-core/src/: backup.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs
(+55 files in other folders)
