[package]
name = "notescribe-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "notescribe_core"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
uniffi = { version = "0.32", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
chrono = "0.4"
thiserror = "1"

[build-dependencies]
uniffi = { version = "0.32", features = ["build"] }
